--- a/ruthProject/angular.json
+++ b/ruthProject/angular.json
@@ -25,10 +25,13 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
+             "node_modules\\bootstrap\\dist\\css\\bootstrap.min.css",
               "src/styles.css"
+              
             ],
-            "scripts": [],
+            "scripts": [
+           
+            ],
             "server": "src/main.server.ts",
             "prerender": true,
             "ssr": {
@@ -90,12 +93,12 @@
               "src/assets"
             ],
             "styles": [
-              "@angular/material/prebuilt-themes/indigo-pink.css",
               "src/styles.css"
+              
             ],
-            "scripts": [ "node_modules/jquery/dist/jquery.min.js",
-            "node_modules/popper.js/dist/umd/popper.min.js",
-            "node_modules/bootstrap/dist/js/bootstrap.min.js"]
+            "scripts": [
+              
+            ]
           }
         }
       }
